[workspace]
resolver = "2"
members = [
    "crates/imod-core",
    "crates/imod-mrc",
    "crates/imod-autodoc",
    "crates/imod-math",
    "crates/imod-transforms",
    "crates/imod-fft",
    "crates/imod-model",
    "crates/imod-slice",
    "crates/imod-image-io",
    "crates/imod-warp",
    "crates/imod-mesh",
    "apps/mrcinfo",
    "apps/mrcbyte",
    "apps/newstack",
    "apps/clip",
    "apps/binvol",
    "apps/trimvol",
    "apps/rotatevol",
    "apps/tiltxcorr",
    "apps/ccderaser",
    "apps/mtffilter",
    "apps/eraser",
    "apps/ctfphaseflip",
    "apps/alignframes",
    "apps/tilt",
    "apps/tiltalign",
    "apps/beadtrack",
    "apps/blendmont",
    "apps/findwarp",
    "apps/warpvol",
    "apps/corrsearch3d",
    "apps/solvematch",
    "apps/imod-viewer",
    "apps/xfinverse",
    "apps/xfproduct",
    "apps/fftrans",
    "apps/avgstack",
    "apps/imodinfo",
    "apps/imodtrans",
    "apps/edgepatches",
    "apps/densmatch",
    "apps/assemblevol",
    "apps/imod-studio",
    "apps/imodmesh",
    "apps/imodjoin",
    "apps/point2model",
    "apps/matchvol",
    "apps/combinefft",
    "apps/reducestack",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[workspace.dependencies]
imod-core = { path = "crates/imod-core" }
imod-mrc = { path = "crates/imod-mrc" }
imod-autodoc = { path = "crates/imod-autodoc" }
imod-math = { path = "crates/imod-math" }
imod-transforms = { path = "crates/imod-transforms" }
imod-fft = { path = "crates/imod-fft" }
imod-model = { path = "crates/imod-model" }
imod-slice = { path = "crates/imod-slice" }
imod-image-io = { path = "crates/imod-image-io" }
imod-warp = { path = "crates/imod-warp" }
imod-mesh = { path = "crates/imod-mesh" }
rustfft = "6"
thiserror = "2"
binrw = "0.14"
clap = { version = "4", features = ["derive"] }
rayon = "1"
