[workspace]
resolver = "2"
members = [
    "crates/imod-core",
    "crates/imod-mrc",
    "crates/imod-autodoc",
    "crates/imod-math",
    "crates/imod-transforms",
    "crates/imod-fft",
    "crates/imod-model",
    "crates/imod-slice",
    "crates/imod-image-io",
    "crates/imod-warp",
    "crates/imod-mesh",
    "apps/mrcinfo",
    "apps/mrcbyte",
    "apps/newstack",
    "apps/clip",
    "apps/binvol",
    "apps/trimvol",
    "apps/rotatevol",
    "apps/tiltxcorr",
    "apps/ccderaser",
    "apps/mtffilter",
    "apps/eraser",
    "apps/ctfphaseflip",
    "apps/alignframes",
    "apps/tilt",
    "apps/tiltalign",
    "apps/beadtrack",
    "apps/blendmont",
    "apps/findwarp",
    "apps/warpvol",
    "apps/corrsearch3d",
    "apps/solvematch",
    "apps/imod-viewer",
    "apps/xfinverse",
    "apps/xfproduct",
    "apps/fftrans",
    "apps/avgstack",
    "apps/imodinfo",
    "apps/imodtrans",
    "apps/edgepatches",
    "apps/densmatch",
    "apps/assemblevol",
    "apps/imod-studio",
    "apps/imodmesh",
    "apps/imodjoin",
    "apps/point2model",
    "apps/matchvol",
    "apps/combinefft",
    "apps/reducestack",
    "apps/taperoutvol",
    "apps/squeezevol",
    "apps/xyzproj",
    "apps/header",
    "apps/mrc2tif",
    "apps/model2point",
    "apps/remapmodel",
    "apps/prenad",
    "apps/enhance",
    "apps/nad_eed_3d",
    "apps/addtostack",
    "apps/subimage",
    "apps/excise",
    "apps/imodextract",
    "apps/imodfillin",
    "apps/imodsortsurf",
    "apps/imodsetvalues",
    "apps/clonemodel",
    "apps/clipmodel",
    "apps/smoothsurf",
    "apps/findbeads3d",
    "apps/rec2imod",
    "apps/findsection",
    "apps/flattenwarp",
    "apps/joinwarp2model",
    "apps/clonevolume",
    "apps/imodmop",
    "apps/patch2imod",
    "apps/imod2patch",
    "apps/imodchopconts",
    "apps/imodcurvature",
    "apps/imodexplode",
    "apps/imodauto",
    "apps/pickbestseed",
    "apps/alterheader",
    "apps/extracttilts",
    "apps/extractpieces",
    "apps/xftoxg",
    "apps/xcorrstack",
    "apps/checkxforms",
    "apps/xfsimplex",
    "apps/extstack",
    "apps/tomopieces",
    "apps/montagesize",
    "apps/findcontrast",
    "apps/densnorm",
    "apps/fixmont",
    "apps/goodframe",
    "apps/imod2obj",
    "apps/imod2vrml",
    "apps/holefinder",
    "apps/wmod2imod",
    "apps/imod2wmod",
    "apps/imod2meta",
    "apps/adocxmlconv",
    "apps/imodholefinder",
    "apps/nogputxc",
    "apps/imod2vrml2",
    "apps/imod2nff",
    "apps/imod2synu",
    "apps/imod2rib",
    "apps/imod2ccdbxml",
    "apps/slashfindspheres",
    "apps/slashmasksort",
    "apps/calc",
    "apps/edgemtf",
    "apps/edpiecepoint",
    "apps/extposition",
    "apps/extractmagrad",
    "apps/fixboundaries",
    "apps/maxjoinsize",
    "apps/numericdiff",
    "apps/rotmont",
    "apps/taperprep",
    "apps/tapervoledge",
    "apps/stitchalign",
    "apps/subimanova",
    "apps/subimstat",
    "apps/avganova",
    "apps/rotmatwarp",
    "apps/mtdetect",
    "apps/stitchvars",
    "apps/imod-aligner",
    "apps/imod-ctfplot",
    "apps/nda",
    "apps/sda",
    "apps/mtk",
    "apps/raptor",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[workspace.dependencies]
imod-core = { path = "crates/imod-core" }
imod-mrc = { path = "crates/imod-mrc" }
imod-autodoc = { path = "crates/imod-autodoc" }
imod-math = { path = "crates/imod-math" }
imod-transforms = { path = "crates/imod-transforms" }
imod-fft = { path = "crates/imod-fft" }
imod-model = { path = "crates/imod-model" }
imod-slice = { path = "crates/imod-slice" }
imod-image-io = { path = "crates/imod-image-io" }
imod-warp = { path = "crates/imod-warp" }
imod-mesh = { path = "crates/imod-mesh" }
rustfft = "6"
thiserror = "2"
binrw = "0.14"
clap = { version = "4", features = ["derive"] }
rayon = "1"
