[package]
name = "ctfphaseflip"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ctfphaseflip"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-mrc.workspace = true
imod-math.workspace = true
imod-fft.workspace = true
imod-transforms = { path = "../../crates/imod-transforms" }
clap = { version = "4", features = ["derive"] }
rustfft = "6"
