[package]
name = "eraser"
version.workspace = true
edition.workspace = true

[[bin]]
name = "eraser"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-mrc.workspace = true
imod-math.workspace = true
imod-model.workspace = true
imod-slice = { path = "../../crates/imod-slice" }
clap = { version = "4", features = ["derive"] }
