[package]
name = "findbeads3d"
version.workspace = true
edition.workspace = true

[[bin]]
name = "findbeads3d"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-model.workspace = true
imod-mrc.workspace = true
imod-math.workspace = true
imod-fft.workspace = true
clap.workspace = true
rayon.workspace = true
