[package]
name = "imodholefinder"
version.workspace = true
edition.workspace = true

[[bin]]
name = "imodholefinder"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-mrc.workspace = true
imod-model.workspace = true
imod-math.workspace = true
imod-fft.workspace = true
clap.workspace = true
