[package]
name = "mtffilter"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mtffilter"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-mrc.workspace = true
imod-math.workspace = true
imod-fft.workspace = true
clap = { version = "4", features = ["derive"] }
rustfft = "6"
