[package]
name = "tiltxcorr"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tiltxcorr"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-mrc.workspace = true
imod-math.workspace = true
imod-fft.workspace = true
imod-transforms = { path = "../../crates/imod-transforms" }
rustfft = "6"
clap = { version = "4", features = ["derive"] }
