[package]
name = "xfsimplex"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xfsimplex"
path = "src/main.rs"

[dependencies]
imod-core.workspace = true
imod-mrc.workspace = true
imod-math.workspace = true
imod-fft.workspace = true
imod-transforms.workspace = true
clap.workspace = true
